TEST_PROGRAMS/INVALID/adam_carruthers/readNonVariable.min
read "whoops";
read 5;
read 3.14;

